test/JDBC/expected/BABEL-3474-vu-prepare.out
create view BABEL_3474_vu_prepare_v1 as (SELECT DATEADD(microsecond, 56, cast('2016-12-26 23:29:29' as DATETIMEOFFSET)));
go

create view BABEL_3474_vu_prepare_v2 as (SELECT DATEADD(microsecond, 701, cast('2016-12-26 23:29:29' as DATETIME2)));
go

create view BABEL_3474_vu_prepare_v3 as (SELECT DATEADD(microsecond,15,cast('12:15:59.9999' as TIME)));
go

create view BABEL_3474_vu_prepare_v4 as (SELECT DATEADD(microsecond, 56, cast('2016-12-26 23:29:29' as DATETIME)));
go

create view BABEL_3474_vu_prepare_v5 as (SELECT DATEADD(microsecond,150,cast('1955-12-13 12:43:10' as SMALLDATETIME)));
go

create view BABEL_3474_vu_prepare_v6 as (SELECT DATEADD(nanosecond, 56, cast('2016-12-26 23:29:29' as DATETIMEOFFSET)));
go

create view BABEL_3474_vu_prepare_v7 as (SELECT DATEADD(nanosecond, 701, cast('2016-12-26 23:29:29' as DATETIME2)));
go

create view BABEL_3474_vu_prepare_v8 as (SELECT DATEADD(nanosecond,1000,cast('12:15:59.9999' as TIME)));
go

create view BABEL_3474_vu_prepare_v9 as (SELECT DATEADD(nanosecond, 56, cast('2016-12-26 23:29:29' as DATETIME)));
go

create view BABEL_3474_vu_prepare_v10 as (SELECT DATEADD(nanosecond,150,cast('1955-12-13 12:43:10' as SMALLDATETIME)));
go

create view BABEL_3474_vu_prepare_v11 as (SELECT DATEADD(day,150,cast('12:15:59.9999' as TIME)));
go

create view BABEL_3474_vu_prepare_v12 as (SELECT DATEADD(second,150,cast('1955-12-13' as DATE)));
go

create procedure  BABEL_3474_vu_prepare_p1 as (SELECT DATEADD(microsecond, 56, cast('2016-12-26 23:29:29' as DATETIMEOFFSET)));
go

create procedure  BABEL_3474_vu_prepare_p2 as (SELECT DATEADD(microsecond, 701, cast('2016-12-26 23:29:29' as DATETIME2)));
go

create procedure  BABEL_3474_vu_prepare_p3 as (SELECT DATEADD(microsecond,15,cast('12:15:59.9999' as TIME)));
go

create procedure  BABEL_3474_vu_prepare_p4 as as (SELECT DATEADD(microsecond, 56, cast('2016-12-26 23:29:29' as DATETIME)));
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'as' at line 1 and character position 46)~~


create procedure  BABEL_3474_vu_prepare_p5 as (SELECT DATEADD(microsecond,150,cast('1955-12-13 12:43:10' as SMALLDATETIME)));
go

create procedure  BABEL_3474_vu_prepare_p6 as (SELECT DATEADD(nanosecond, 56, cast('2016-12-26 23:29:29' as DATETIMEOFFSET)));
go

create procedure  BABEL_3474_vu_prepare_p7 as (SELECT DATEADD(nanosecond, 701, cast('2016-12-26 23:29:29' as DATETIME2)));
go

create procedure  BABEL_3474_vu_prepare_p8 as (SELECT DATEADD(nanosecond,1000,cast('12:15:59.9999' as TIME)));
go

create procedure  BABEL_3474_vu_prepare_p9 as (SELECT DATEADD(nanosecond, 56, cast('2016-12-26 23:29:29' as DATETIME)));
go

create procedure  BABEL_3474_vu_prepare_p10 as (SELECT DATEADD(nanosecond,150,cast('1955-12-13 12:43:10' as SMALLDATETIME)));
go

create procedure  BABEL_3474_vu_prepare_p11 as (SELECT DATEADD(day,150,cast('12:15:59.9999' as TIME)));
go

create procedure  BABEL_3474_vu_prepare_p12 as (SELECT DATEADD(second,150,cast('1955-12-13' as DATE)));
go

create function BABEL_3474_vu_prepare_f1()
returns DATETIME as
begin
return (SELECT * from DATEADD(microsecond, 56, cast('2016-12-26 23:29:29' as DATETIMEOFFSET)));
end
go

create function BABEL_3474_vu_prepare_f2()
returns DATETIME as
begin
return (SELECT * from DATEADD(microsecond, 701, cast('2016-12-26 23:29:29' as DATETIME2)));
end
go

create function BABEL_3474_vu_prepare_f3()
returns DATETIME as
begin
return (SELECT * from DATEADD(microsecond,15,cast('12:15:59.9999' as TIME)));
end
go

create function BABEL_3474_vu_prepare_f4()
returns DATETIME as
begin
return (SELECT * from DATEADD(microsecond, 56, cast('2016-12-26 23:29:29' as DATETIME)));
end
go

create function BABEL_3474_vu_prepare_f5()
returns DATETIME as
begin
return (SELECT * from DATEADD(microsecond,150,cast('1955-12-13 12:43:10' as SMALLDATETIME)));
end
go

create function BABEL_3474_vu_prepare_f6()
returns DATETIME as
begin
return (SELECT * from DATEADD(nanosecond, 56, cast('2016-12-26 23:29:29' as DATETIMEOFFSET)));
end
go

create function BABEL_3474_vu_prepare_f7()
returns DATETIME as
begin
return (SELECT * from DATEADD(nanosecond, 701, cast('2016-12-26 23:29:29' as DATETIME2)));
end
go

create function BABEL_3474_vu_prepare_f8()
returns DATETIME as
begin
return (SELECT * from DATEADD(nanosecond,1000,cast('12:15:59.9999' as TIME)));
end
go

create function BABEL_3474_vu_prepare_f9())
returns DATETIME as
begin
return (SELECT * from DATEADD(nanosecond, 56, cast('2016-12-26 23:29:29' as DATETIME)));
end
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near ')' at line 1 and character position 42)~~


create function BABEL_3474_vu_prepare_f10()
returns DATETIME as
begin
return (SELECT * from DATEADD(nanosecond,150,cast('1955-12-13 12:43:10' as SMALLDATETIME)));
end
go

create function BABEL_3474_vu_prepare_f11())
returns DATETIME as
begin
return (SELECT * from DATEADD(day,150,cast('12:15:59.9999' as TIME)));
end
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near ')' at line 1 and character position 43)~~


create function BABEL_3474_vu_prepare_f12()
returns DATETIME as
begin
return (SELECT * from DATEADD(second,150,cast('1955-12-13' as DATE)));
end
go
